--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Scripts -->
     <script src="./index.js" defer></script>
-    <title>Document</title>
+    <title>Calculadora De Itens</title>
 </head>
 <body>
     <div class="content__container">
