--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <label for="quantidade">Quantidade de itens a serem feitos</label>
         <input type="number" max="8" name="quantidade" id="quantidade" required>
 
-        <h3>Materiais que ja tem:</h3>
+        <h3>Materiais que ja tem (épico):</h3>
 
         <label for="aço">Aço/Platina</label>
 
